# StratixFramework

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
stratix_framework/: __init__.py  entity.py  event.py  interfaces.py  specification.py  tools.py  value_object.py
tests/: test_entity.py  test_event.py  test_value_object.py
