[tool.poetry]
name = "stratix-framework"
version = "0.1.0"
description = ""
authors = ["MrAbade <vini.abade@outlook.com.br>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
trio = "^0.26.0"
pydantic = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"
mypy = "^1.11.0"
pylint = "^3.2.6"
flake8 = "^7.1.0"
ipython = "^8.26.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
pytest-trio = "^0.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = "True"
ignore_missing_imports = "True"
check_untyped_defs = "true"
disallow_incomplete_defs = "true"
no_implicit_optional = "true"
no_implicit_reexport = "true"
strict_equality = "true"
warn_redundant_casts = "true"
warn_unused_ignores = "true"

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests", "src"]

[tool.pylint]
init-hook = "import sys; sys.path.append('./src'), sys.path.append('./tests')"
fail-under = "9.5"

[tool.pylint.format]
max-line-length = "120"

[tool.pylint.messages_control]
disable = ["C0103", "C0114", "C0115", "C0116", "C0301", "C0103", "E701", "R0801", "R0903", "W1203", "W0621", "W0221", "W0212", "W0707", "W0201", "W0231"]

[tool.pylint.similarities]
ignore-imports = "yes"
min-similarity-lines = "6"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line-length = 120
